--- a/src/pages/Job/Job.scss
+++ b/src/pages/Job/Job.scss
@@ -43,7 +43,7 @@
 
   &__sub-title {
     color: var(--white, #FFF);
-    font-family: Noto Sans;
+    font-family: "Noto Sans";
     font-size: 26px;
     font-style: normal;
     font-weight: 500;
@@ -99,7 +99,7 @@
       color: var(--white, #FFF);
 
       /* Desktop/Text Large */
-      font-family: Noto Sans;
+      font-family: "Noto Sans";
       font-size: 26px;
       font-style: normal;
       font-weight: 400;
@@ -118,7 +118,7 @@
     &__title {
       color: var(--white, #FFF);
 
-      font-family: Noto Sans;
+      font-family: "Noto Sans";
       font-size: 26px;
       font-style: normal;
       font-weight: 700;
@@ -134,7 +134,7 @@
       width: 786px;
       color: var(--white, #FFF);
       /* Desktop/Text Large */
-      font-family: Noto Sans;
+      font-family: "Noto Sans";
       font-size: 26px;
       font-style: normal;
       font-weight: 400;
@@ -151,7 +151,7 @@
     border: 1px solid var(--Grey, #9E9E9E);
 
     color: var(--white, #FFF);
-    font-family: Noto Sans;
+    font-family: "Noto Sans";
     font-size: 24px;
     font-style: normal;
     font-weight: 300;
