--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -103,7 +103,7 @@
         }
 
         .title {
-          font-family: Noto Sans;
+          font-family: "Noto Sans";
           font-size: 22px;
           font-weight: 600;
           line-height: 27px;
@@ -269,7 +269,7 @@
             width: 28px;
           }
           .title {
-            font-family: Noto Sans;
+            font-family: "Noto Sans", sans-serif;
             font-size: 24px;
             font-weight: 600;
             line-height: 32px;
@@ -496,7 +496,7 @@
 
       input {
         width: 320px;
-        font-family: Noto Sans;
+        font-family: "Noto Sans";
         font-size: 18px;
         font-weight: 400;
         line-height: 27px;
@@ -513,7 +513,7 @@
       }
 
       .button {
-        font-family: Noto Sans;
+        font-family: "Noto Sans";
         font-size: 18px;
         font-weight: 400;
         line-height: 27px;
